<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.forest.kidzphone.MainActivity">

    <LinearLayout
        android:id="@+id/top_row_icons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:background="#000000"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:id="@+id/dial_button"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="DIAL" />

        <Button
            android:id="@+id/contact_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="CONTACTS" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:id="@+id/number_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="42sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_contact_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/name_text_input"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="Name"
                android:inputType="text"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/number_text_input"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="phone number"
                android:inputType="phone"
                android:textColor="#000000" />

            <Button
                android:id="@+id/SAVE_NEW_CONTACT_BUTTON"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Save"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </LinearLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".60">

        <LinearLayout
            android:id="@+id/call_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FF00"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calling_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="CALL"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_Contact_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D3D3D3"
            android:visibility="gone">

            <TextView
                android:id="@+id/add_contact_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Add Contact"
                android:textSize="25sp" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ListView
            android:id="@+id/contact_list_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </ListView>

        <LinearLayout
            android:id="@+id/number_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/one_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_one" />

                <Button
                    android:id="@+id/two_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_tow" />

                <Button
                    android:id="@+id/three_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_three" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">>

                <Button
                    android:id="@+id/four_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_four" />

                <Button
                    android:id="@+id/five_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_five" />

                <Button
                    android:id="@+id/six_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_six" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <Button
                    android:id="@+id/seven_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_seven" />

                <Button
                    android:id="@+id/eight_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_eight" />

                <Button
                    android:id="@+id/nine_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_nine" />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="X" />

                <Button
                    android:id="@+id/zero_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_zero"

                    />


                <Button
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Backspace" />

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>

